# kawa-ingest

./: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
proto/: kawa.proto  transcoder.proto
src/: extractor.rs  main.rs  session_manager.rs
src/connection/: actions.rs  connection_reader.rs  connection_writer.rs  mod.rs  state.rs
src/stream_manager/: connection_message.rs  mod.rs  stream_manager_message.rs
src/transcoder/: handler.rs  message.rs  mod.rs  state.rs
