[package]
name = "kawa-ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
futures = "0.3.30"
log = "0.4.20"
rml_rtmp = "0.8.0"
slab = "0.4.9"
tokio = { version = "1.35.1", features = ["full"] }
